Update file names

--- a/1 - Iniciando Aritmética em C#/Media1/Media1.csproj
+++ b/1 - Iniciando Aritmética em C#/Media1/Media1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Cálculo_de_média_escolar</RootNamespace>
+    <RootNamespace>Media1</RootNamespace>
   </PropertyGroup>
 
 </Project>
