--- a/1 - Iniciando Aritmética em C#/Media2/Media2.csproj
+++ b/1 - Iniciando Aritmética em C#/Media2/Media2.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Cálculo_de_média_escolar_2</RootNamespace>
+    <RootNamespace>Media2</RootNamespace>
   </PropertyGroup>
 
 </Project>
